--- a/data.html
+++ b/data.html
@@ -147,9 +147,9 @@ window.onload = function (evt) {
 </script>
 </head>
 <body>
-<h1>Step 2: Data (Compile Information)</h1>
+<h1>Step 2: Compile Data</h1>
 <img src="img/headers/overview_sm.png" align="left"><h2>&nbsp;&nbsp;Overview</h2>
-MSP typically relies on both spatial and non-spatial information characterizing the coastal and marine space. An organized collection of information is useful for all types of participants involved in MSP.  Data allow you to visualize the locations of current environments and human activities and serve as a foundation for discussions of future plans.  Often, data also serve as inputs to predictive models and <a href="analyze.html#tools">MSP decision-support tools</a>.  Other times data are used to visually depict or quantify elements of <a href="scenario.html"><b>Scenarios</b></a>.  The uses for the data should be clearly identified before data are collected – often based on the goals established during the <a href="scope.html"><b>Scope</b></a> and <a href="analyze.html"><b>Analyze</b></a> steps.
+Marine planning typically relies on both spatial and non-spatial information characterizing the coastal and marine space. An organized collection of information is useful for all types of participants involved in marine planning.  Data allow you to visualize the locations of current environments and human activities and serve as a foundation for discussions of future plans.  Often, data also serve as inputs to predictive models and <a href="analyze.html#tools">marine planning decision-support tools</a>.  Other times data are used to visually depict or quantify elements of <a href="scenario.html"><b>Scenarios</b></a>.  The uses for the data should be clearly identified before data are collected – often based on the goals established during the <a href="scope.html"><b>Scope</b></a> and <a href="analyze.html"><b>Analyze</b></a> steps.
 Generally, useful data include biophysical and oceanographic information such as elevation and bathymetry, maps of human activities such as transportation routes or fishing grounds, the distribution of coastal and marine habitats, and socioeconomic data like those provided by official censuses.  When monetary valuation is a part of the assessment, additional data on market prices or property values may also be pertinent.
 
 <p></p>
@@ -164,19 +164,19 @@ Generally, useful data include biophysical and oceanographic information such as
 <a name="tips"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tips_sm.png" align="left"><h2>&nbsp;&nbsp;Tips</h2>
 <ul>
-<li>Don’t spend too much time initially on this step. The <b>Data</b> step can be a rabbit hole because you can collect and amass new data for forever.  Only collect the data you need to reach your management and planning objectives. </li>
+<li>Don’t spend too much time initially on this step. The <b>Compile Data</b> step can be a rabbit hole because you can collect and amass new data for forever.  Only collect the data you need to reach your management and planning objectives. </li>
 <li>Use global or regional data sources to get a 'lay of the land' and identify data gaps/needs</li>
 <li>Show preliminary data to stakeholders; use expert feedback to refine information (see <a href="iterate.html"><b>Iterate</b></a> step)</li>
 <li>If funding allows, consider adding a dedicated GIS/data analyst to your team</li>
 </ul>
 <p></p>
 <ul id="folio_scroller">
-<li><span>Vector and raster are common spatial data formats used in MSP decision-support tools.   Tabular data (e.g., Excel or CSV tables) can be linked to spatial datasets using a GIS.</span><img alt="" src="img/data_formats.png" /></a></li>
+<li><span>Vector and raster are common spatial data formats used in marine planning decision-support tools.   Tabular data (e.g., Excel or CSV tables) can be linked to spatial datasets using a GIS.</span><img alt="" src="img/data_formats.png" /></a></li>
 </ul> 
 <p></p><br>
 <a name="databases"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/databases_sm.png" align="left"><h2>&nbsp;&nbsp;Global Databases</h2>
-There are many useful MSP data sources available online, including:
+There are many useful marine planning data sources available online, including:
 <li><a href="http://www.bluehabitats.org/" target="_blank">Blue Habitats</a> - Home to the global <b>seafloor geomorphic features map</b></li>
 <li><a href="http://www.imf.org/external/data.htm" target="_blank">The International Monetary Fund</a> - A range of time series data on IMF lending, exchange rates and other <b>economic and financial indicators</b></li>
 <li><a href="http://marinexplore.org/browse/" target="_blank">MarineExplore.org</a> - The world's <b>ocean data</b> at your fingertips; access measurements and create datasets</li>
@@ -193,7 +193,7 @@ There are many useful MSP data sources available online, including:
 <li><a href="http://www.worldpop.org.uk/data/" target="_blank">Worldpop</a> - High resolution, contemporary data on <b>human population</b> distributions</li>
 <p></p>
 <img src="img/headers/databases_sm.png" align="left"><h2>&nbsp;&nbsp;Regional Databases</h2>
-Click on the links or hover over the map markers to learn more about these regional MSP databases.
+Click on the links or hover over the map markers to learn more about these regional marine planning databases.
 <li><a href="http://omap.africanmarineatlas.org/index.htm" target="_blank">Africa Marine Atlas</a> - <b>Africa</b></li>
 <li><a href="http://alaskafisheries.noaa.gov/shorezone/" target="_blank">Alaska Shorezone Coastal Mapping and Imagery</a> - <b>USA</b></li>
 <li><a href="http://www.ga.gov.au/scientific-topics/marine/jurisdiction/amsis" target="_blank">Australian Marine Spatial Information System (AMSIS)</a> - <b>Australia</b></li>
@@ -212,26 +212,26 @@ Click on the links or hover over the map markers to learn more about these regio
 <li><a href="http://ned.usgs.gov/" target="_blank">USGS National Elevation Dataset (NED)</a> - <b>USA</b></li>
 <p></p>
 <ul id="folio_scroller">
-<li><span>Regional MSP Databases</span><iframe width='600px' height='300px' frameBorder='0' src='reg_msp_data.html'></iframe></li>
+<li><span>Regional Marine Planning Databases</span><iframe width='600px' height='300px' frameBorder='0' src='reg_msp_data.html'></iframe></li>
 </ul>
 <p></p><br>
-<i>Do you know of other global or regional MSP databases?  <a href="mailto:gverutes@stanford.edu?Subject=MSP%20Database" target="_top">E-mail us</a> the details!</i>
+<i>Do you know of other global or regional marine planning databases?  <a href="mailto:gverutes@stanford.edu?Subject=Marine %20Planning%20Database" target="_top">E-mail us</a> the details!</i>
 <p></p>
 <a name="tools"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tools_sm.png" align="left"><h2>&nbsp;&nbsp;InVEST Helper Tools</h2>
 <img src="img/on_ramp.png"><br>
-Spatial and tabular data typically require some amount of processing before they can be plugged into <a href="marine_invest.html">Marine InVEST</a> or other <a href="analyze.html#tools">MSP decision-support tools</a>. Data processing is a challenging but necessary step. NatCap has created a <a href="http://msp.naturalcapitalproject.org/download/" target="_blank">MSP Toolset</a> and documentation to assist InVEST users with preparing and formatting data inputs for analyzing ecosystem service outcomes: 
+Spatial and tabular data typically require some amount of processing before they can be plugged into <a href="marine_invest.html">Marine InVEST</a> or other <a href="analyze.html#tools">marine planning decision-support tools</a>. Data processing is a challenging but necessary step. NatCap has created a <a href="http://msp.naturalcapitalproject.org/download/" target="_blank">Marine Planning Toolset</a> and documentation to assist InVEST users with preparing and formatting data inputs for analyzing ecosystem service outcomes: 
 <ol>
 <li><a href="http://naturalcapitalproject.org/pubs/InVEST_DataRequirements_June2014.xlsx" target="_blank">InVEST 3.x Data Requirements</a> - A spreadsheet listing the required and optional inputs for each InVEST model</li>
-<li><a href="http://ncp-dev.stanford.edu/~dataportal/nightly-build/release_tip/release_tip/documentation/" target="_blank">InVEST 3.x User's Guide</a> - Each chapter includes a "Data Needs" section that outlines input and formatting requirements for InVEST models</li>
-<li><a href="docs/MSP_HelperToolbox.zip" target="_blank">MSP Helper Tools</a> - A GIS toolbox for pre-processing data to be used with marine InVEST models (<i>requires ArcGIS 10.x license</i>)</li>
+<li><a href="http://data.naturalcapitalproject.org/nightly-build/invest-users-guide/html/" target="_blank">InVEST 3.x User's Guide</a> - Each chapter includes a "Data Needs" section that outlines input and formatting requirements for InVEST models</li>
+<li><a href="docs/MarinePlanning_HelperToolbox.zip" target="_blank">Marine Planning Helper Tools</a> - A GIS toolbox for pre-processing data to be used with marine InVEST models (<i>requires ArcGIS 10.x license</i>)</li>
 <li><a href="http://forums.naturalcapitalproject.org/index.php?p=/categories/experimental-software-tools" target="_blank">Experimental Software Tools</a> - A discussion thread where NatCap staff and members of our community of practice share details about new software tools</li>
 </ol>
 <p></p>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/faq_sm.png" align="left"><h2>&nbsp;&nbsp;Frequently Asked Questions (FAQ)</h2>
-<b>Q: Where can I find data for MSP?</b><br>
-<i>A: We have compiled a select list of global and regional MSP databases (see above). Environmental NGOs and local government agencies often have data available upon request or through a data sharing agreement. Some partners and collaborators may also have a network of data sources. When requesting data, be clear and transparent about how your team intends to use the information.  Another good source is the peer-reviewed scientific literature.  Even if you don’t have data from your specific site to parameterize models, you may be able to find data from the larger region around your site in a published paper (e.g., supplemental text in <a href="docs/Arkema_etal_2014_EL_SI.pdf" target="_blank">Arkema et al. 2014</a>).  Generally, data about the spatial distribution and intensity of human activities that reflect your current and possible future management scenarios (i.e., zones of human uses for MSP if relevant to your process) will come from local government agencies.  Maps of habitats and species can be acquired from global databases and local or international NGOs.  Parameters and other input data for ecosystem service models generally come from scientific experts and their local data, the peer reviewed literature, and global databases.</i><br>
+<b>Q: Where can I find data for marine planning?</b><br>
+<i>A: We have compiled a select list of global and regional marine planning databases (see above). Environmental NGOs and local government agencies often have data available upon request or through a data sharing agreement. Some partners and collaborators may also have a network of data sources. When requesting data, be clear and transparent about how your team intends to use the information.  Another good source is the peer-reviewed scientific literature.  Even if you don’t have data from your specific site to parameterize models, you may be able to find data from the larger region around your site in a published paper (e.g., supplemental text in <a href="docs/Arkema_etal_2014_EL_SI.pdf" target="_blank">Arkema et al. 2014</a>).  Generally, data about the spatial distribution and intensity of human activities that reflect your current and possible future management scenarios (i.e., zones of human uses if relevant to your process) will come from local government agencies.  Maps of habitats and species can be acquired from global databases and local or international NGOs.  Parameters and other input data for ecosystem service models generally come from scientific experts and their local data, the peer reviewed literature, and global databases.</i><br>
 <p></p>
 <b>Q: How do I handle data gaps?</b><br>
 <i>A: Lack of data can present a serious challenge. A GIS analyst may be able to compile different sources of information and piece them together as a continuous data set (e.g., seagrass data sets for the Unites States in <a href="docs/Arkema_etal_2013_NCC_SI.pdf" target="_blank">Arkema et al. 2013</a>). Also, keep in mind that stakeholders often respond well to qualitative outputs too. Ultimately, it's important to be clear throughout the process as to where there is uncertainty or lack of confidence due to paucity of information.</i>
@@ -242,9 +242,9 @@ Spatial and tabular data typically require some amount of processing before they
 <a name="links"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/links_sm.png" align="left"><h2>&nbsp;&nbsp;Links</h2>
 <ul>
-<li>Cornu, Elodie, et al. "Current Practice and Future Prospects for Social Data in Coastal and Ocean Planning." <i>Conservation Biology</i> (2014). <a href="http://onlinelibrary.wiley.com/doi/10.1111/cobi.12310/full" target="_blank">doi:10.1111/cobi.12310</a></li>
-<li>Kittinger, John N., et al. "A practical approach for putting people in ecosystem-based ocean planning." <i>Frontiers in Ecology and the Environment</i> 12.8 (2014): 448-456. <a href="http://dx.doi.org/10.1890/130267" target="_blank">http://dx.doi.org/10.1890/130267</a></li>
-<li>Koehn, J. Zachary, Daniel R. Reineman, and John N. Kittinger. "Progress and promise in spatial human dimensions research for ecosystem-based ocean planning." <i>Marine Policy</i> 42 (2013): 31-38. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X13000249" target="_blank">doi:10.1016/j.marpol.2013.01.015</a></li>
+<li>Cornu, Elodie, et al. "Current Practice and Future Prospects for Social Data in Coastal and Ocean Planning." <i>Conservation Biology</i> (2014). <a href="docs/Cornu_etal_2014_CB.pdf" target="_blank">doi:10.1111/cobi.12310</a></li>
+<li>Kittinger, John N., et al. "A practical approach for putting people in ecosystem-based ocean planning." <i>Frontiers in Ecology and the Environment</i> 12.8 (2014): 448-456. <a href="docs/Kittinger_etal_2014_FEE.pdf" target="_blank">http://dx.doi.org/10.1890/130267</a></li>
+<li>Koehn, J. Zachary, Daniel R. Reineman, and John N. Kittinger. "Progress and promise in spatial human dimensions research for ecosystem-based ocean planning." <i>Marine Policy</i> 42 (2013): 31-38. <a href="docs/Koehn_etal_2013_MP.pdf" target="_blank">doi:10.1016/j.marpol.2013.01.015</a></li>
 <li><a href="http://csc.noaa.gov/digitalcoast/tools/list" target="_blank">NOAA Digital Coast</a><br>
 - <a href="http://coast.noaa.gov/digitalcoast/tools/port" target="_blank">Port Resilience Planning Tool</a> - Identify potential considerations (e.g., hazards, transportation) for planning around ports (includes data for 26 US ports)<br>
 - <a href="http://coast.noaa.gov/digitalcoast/tools/snapshots" target="_blank">Coastal Country Snapshots</a> - Summarizes community economic dependence on the coast and its vulnerability<br>  
@@ -272,7 +272,7 @@ Our core Barbados project team was dispearsed throughout four different offices 
 </ul> 
 <p></p>
 <h4>New England</h4>
-The team in New England is using a variety of data sources to tackle some wide-ranging research questions. The <a href="http://www.northeastoceandata.org/" target="_blank">Northeast Ocean Data Portal</a> is a comprehensive online portal for MSP-relevant data.  The <a href="http://ned.usgs.gov/" target="_blank">US Geological Survey</a> and <a href="http://www.edc.uri.edu/rigis/" target="_blank">Rhode Island Geographic Information System</a> offer detailed digital elevation models (DEMs).  We are also using <a href="http://www.nefsc.noaa.gov/epd/ocean/MainPage/ioos.html" target="_blank">NOAA trawl survey fisheries and oceanographic data</a>.
+The team in New England is using a variety of data sources to tackle some wide-ranging research questions. The <a href="http://www.northeastoceandata.org/" target="_blank">Northeast Ocean Data Portal</a> is a comprehensive online portal for marine planning-relevant data.  The <a href="http://ned.usgs.gov/" target="_blank">US Geological Survey</a> and <a href="http://www.edc.uri.edu/rigis/" target="_blank">Rhode Island Geographic Information System</a> offer detailed digital elevation models (DEMs).  We are also using <a href="http://www.nefsc.noaa.gov/epd/ocean/MainPage/ioos.html" target="_blank">NOAA trawl survey fisheries and oceanographic data</a>.
 <p></p>
 </body>
 </html>
