--- a/scope.html
+++ b/scope.html
@@ -178,21 +178,21 @@ By solidifying (not necessarily finalizing) project goals and objectives, your t
 &#x2714;&nbsp;Project team with well-articulated roles and responsibilities <br>
 &#x2714;&nbsp;Work plan, including expected methodology and timeline<br>
 &#x2714;&nbsp;Preliminary assessment of available and needed resources<br>&nbsp;&nbsp;&nbsp;(e.g., data, local knowledge, team capacity, lines of communication to authorities and local experts, funding)<p></p>
-For more details on how scoping can help solidify project goals, see our <a href="scope.html#use-cases">MSP use-cases</a> at the bottom of this page.
+For more details on how scoping can help solidify project goals, see our <a href="scope.html#use-cases">marine planning use-cases</a> at the bottom of this page.
 <p></p>
 <a name="tips"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tips_sm.png" align="left"><h2>&nbsp;&nbsp;Tip</h2>
-Remember that decision-making is exceedingly complex and to have appropriate expectations. If your science is good and your science-policy process is well scoped and executed, your MSP project is more likely to have an impact.  Have patience, it may take longer than you think.
+Remember that decision-making is exceedingly complex and to have appropriate expectations. If your science is good and your science-policy process is well scoped and executed, your marine planning project is more likely to have an impact.  Have patience, it may take longer than you think.
 <p></p>
 <a name="questions"></a><div class="hr dotted clearfix">&nbsp;</div>
-<img src="img/headers/scopeQ_sm.png" align="left"><h2>&nbsp;&nbsp;Sample MSP Scoping Questions</h2><p></p>
+<img src="img/headers/scopeQ_sm.png" align="left"><h2>&nbsp;&nbsp;Sample Scoping Questions</h2><p></p>
 <ul>
 <li>What are the marine and coastal issues people in this region care the most about?<br>(e.g., preserving and enhancing existing uses, finding space for new and emerging uses)</li>
 <li>Where should we site particular kinds of activities?<br>(e.g., conservation, restoration, extraction, development)</li>
 <li>What are the ecosystem components people care most about?<br>(e.g., endangered species, special places, opportunities for important activities)</li>
 <li>What time horizon are you planning for?</li>
 <li>Who has the authority to do something with the information generated? Are they involved in the process or do they have good connections to it?</li>
-<li>Have we articulated clear, answerable questions?<br>(e.g., those that can be addressed in the <a href="analyze.html"><b>Analyze</b></a> step; see <a href="coming_soon.html">Arkema et al. 2015</a>)</li>
+<li>Have we articulated clear, answerable questions?<br>(e.g., those that can be addressed in the <a href="analyze.html"><b>Analyze</b></a> step; see <a href="docs/Arkema_etal_2015_PNAS.pdf" target="_blank">Arkema et al. 2015</a>)</li>
 <li>What is the timeline for the planning process and can we achieve our goals within the time allotted?</li>
 <li>How many iterations through the steps in this concierge do we intend to undertake?  Who can we consult for feedback along the way?</li>
 <li>Will the models and tools we have at our disposal answer the management and science questions we are asking?</li>
@@ -210,15 +210,15 @@ Remember that decision-making is exceedingly complex and to have appropriate exp
 <ul>
 <li>Ehler, Charles, and Fanny Douvere. "Marine spatial planning, a step-by-step approach towards ecosystem-based management." (2009). <a href="http://www.unesco-ioc-marinesp.be/uploads/documentenbank/d87c0c421da4593fd93bbee1898e1d51.pdf
 " target="_blank">http://hdl.handle.net/1834/4475</a> (See "Steps 1-5", pp. 26-62)</li>
-<li>Foley, Melissa M., et al. "Guiding ecological principles for marine spatial planning." <i>Marine Policy</i> 34.5 (2010): 955-966. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X10000436" target="_blank">    doi:10.1016/j.marpol.2010.02.001</a> (See "Section 3. Application")</li>
-<li>Halpern, Benjamin S., et al. "Near-term priorities for the science, policy and practice of Coastal and Marine Spatial Planning (CMSP)." <i>Marine Policy</i> 36.1 (2012): 198-205.<a href="http://www.sciencedirect.com/science/article/pii/S0308597X11000935" target="_blank"> doi:10.1016/j.marpol.2011.05.004</a> (See "Section 2.1. Process")</li>
+<li>Foley, Melissa M., et al. "Guiding ecological principles for marine spatial planning." <i>Marine Policy</i> 34.5 (2010): 955-966. <a href="docs/Foley_etal_2010_MP.pdf" target="_blank">    doi:10.1016/j.marpol.2010.02.001</a> (See "Section 3. Application")</li>
+<li>Halpern, Benjamin S., et al. "Near-term priorities for the science, policy and practice of Coastal and Marine Spatial Planning (CMSP)." <i>Marine Policy</i> 36.1 (2012): 198-205.<a href="docs/Halpern_etal_2012_MP.pdf" target="_blank"> doi:10.1016/j.marpol.2011.05.004</a> (See "Section 2.1. Process")</li>
 <li>Rosenthal, Amy, et al. "Process matters: a framework for conducting decision-relevant assessments of ecosystem services." <i>International Journal of Biodiversity Science, Ecosystem Services & Management</i> (2014): 1-15. <a href="docs/Rosenthal_etal_2014_IJBSESM.pdf" target="_blank">doi:10.1080/21513732.2014.966149</a> (See "Section 4.1. Scope")</li>
 <li>Waite, Richard, et al. "Coastal capital: ecosystem valuation for decision making in the Caribbean</a>." World Resources Institute, 2014. <a href="http://eprints.soton.ac.uk/362289/" target="_blank">http://eprints.soton.ac.uk/id/eprint/362289</a> (See "Phase 1: Scope", pp. 15-24)</li>
 <li><a href="http://openchannels.org/" target="_blank">OpenChannels</a> - An online community of ocean planners and managers sharing experience, knowledge, and advice</li>
 <li><a href="http://searchmesh.org/default.aspx?page=1931" target="_blank">MESH Scoping Tool</a> - A Flash interactive tool and guidance for undertaking an ocean  mapping/survey project</li>
 <li><a href="http://marineecosystemservices.org/" target="_blank">Marine Ecosystem Services Partnership</a> - A searchable database of nearly 900 studies on marine ES valuation</li>
 <li><a href="http://bluesolutions.info/solutions/" target="_blank">Blue Solutions</a> - A database of solutions to coastal-marine challenges that are impactful, scalable, and can be replicated</li>
-<li><a href="http://www.cmspadvancement.com/" target="_blank">CMSP Advancement Training</a> - Free training in the United States for coastal managers and MSP practitioners</li>
+<li><a href="https://nicholas.duke.edu/del/upcoming-executive-education-courses/cmsp" target="_blank">CMSP Training Courses</a> - Free in-person and online training for coastal managers and marine planning practitioners</li>
 </ul>
 <p></p>
 <a name="use-cases"></a><div class="hr dotted clearfix">&nbsp;</div>
@@ -242,7 +242,7 @@ Our work in New England spans across multiple ecosystem service categories and p
 <li><u>Policy window and timeline</u>: <b>2012 - 2016</b></li>
 <li><u>Important issues and ecosystem components</u>: Fisheries, Wind Energy, Scenic Quality, Cumulative Impacts of Human Activities, Climate Change</li>
 <li><u>Specific questions asked</u>: Where to site activities when there are overlapping uses in the ocean? How will fishing communities be impacted by shifting fish populations? Where are human activities impacting the provision of ecosystem services?</li>
-<li><u>Expected outcomes</u>: Replicable tools and methodologies for assessing visibility, changes in fish distribution, and the provision of ecosystem services across space. Research papers documenting these methods in the context of New England. New maps and data for consideration in regional MSP, publicly hosted by NatCap or partners.</li>
+<li><u>Expected outcomes</u>: Replicable tools and methodologies for assessing visibility, changes in fish distribution, and the provision of ecosystem services across space. Research papers documenting these methods in the context of New England. New maps and data for consideration in regional marine planning, publicly hosted by NatCap or partners.</li>
 <p></p>
 <h4>Bahamas</h4>
 In the Bahamas, the Office of the Prime Minister (OPM) is working with the Natural Capital Project, the Inter-American Development Bank and The Nature Conservancy to design a master plan for Andros Island that will serve as a pilot for their national economic development planning.  Over the course of the next nine months, the partners will work in collaboration with key stakeholders on Andros Island to put forward a preferred master plan that will achieve multiple objectives such as enhancing and diversifying agriculture yield, increasing revenue from sport fishing, catch and revenue from local and domestic markets of crab and conch, respectively, and reducing damages and loss of life from coastal hurricanes.<p></p>
