--- a/synthesize.html
+++ b/synthesize.html
@@ -150,7 +150,7 @@ window.onload = function (evt) {
 <img src="img/headers/overview_sm.png" align="left"><h2>&nbsp;&nbsp;Overview and Goals</h2>
 The overarching goal of the <b>Synthesize</b> step is to ensure that the outputs of your ecosystem services analysis directly inform on-the-ground planning and policies. Because decision-support tools are designed to be useful in diverse locations and contexts, raw outputs from these tools often need to be tailored to the specific issues and local objectives you identified in the <a href="scope.html"><b>Scope</b></a> step.
 <p></p>
-Synthesis includes highlighting and visualizing specific outputs, converting ecosystem service outputs into metrics most relevant to stakeholders, assessing spatial variation in services and their values, and highlighting synergies and trade-offs among human uses and benefits of the environment. This step typically requires substantial "post-processing" of model outputs to ensure that the information is customized to meet needs of the decision-makers creating the MSP. Examples of post-processing include mapping multiple ecosystem services or human activities, producing plots or tables that compare ecosystem service production among regions, or producing maps showing percent change from an established baseline (e.g., current scenario).  For more synthesis examples of ecosystem service information for MSP, visit our <b><a href="gallery.html">Gallery</a></b>.
+Synthesis includes highlighting and visualizing specific outputs, converting ecosystem service outputs into metrics most relevant to stakeholders, assessing spatial variation in services and their values, and highlighting synergies and trade-offs among human uses and benefits of the environment. This step typically requires substantial "post-processing" of model outputs to ensure that the information is customized to meet needs of the decision-makers creating a marine plan. Examples of post-processing include mapping multiple ecosystem services or human activities, producing plots or tables that compare ecosystem service production among regions, or producing maps showing percent change from an established baseline (e.g., current scenario).  For more synthesis examples of ecosystem service information for marine planning, visit our <b><a href="gallery.html">Gallery</a></b>.
 <p></p>
 <img src="img/approach_Step5.png" usemap="#step5"><br>
 <map name="step5">
@@ -165,12 +165,12 @@ Synthesis includes highlighting and visualizing specific outputs, converting eco
 <ul>
 <li>There are countless possibilities for ecosystem service metrics and ways to display and synthesize outputs from the <a href="analyze.html"><b>Analyze</b></a> step</li>
 <li>Use simple metrics and visuals that make sense and seem to resonate with decision-makers (see Use-Cases below)</li>
-<li>Co-design your metrics and graphics with local partners, experts, and planners to ensure they will be meaningful to stakeholders and decision-makers in your region (<a href="http://www.envplan.com/abstract.cgi?id=c12292j" target="_blank">McKenzie et al. 2014</a>, <a href="docs/Ruckelshaus_etal_2014_EE.pdf" target="_blank">Ruckelshaus et al. 2014</a>, and others)</li>
-<li>Ensure that your synthesis answers the key management questions and addresses the central issues identified and agreed upon on in the <a href="scope.html">Scope</a> step. This is your chance to deliver on agreed-upon needs.</li>
+<li>Co-design your metrics and graphics with local partners, experts, and planners to ensure they will be meaningful to stakeholders and decision-makers in your region (<a href="docs/McKenzie_etal_2014_EPC.pdf" target="_blank">McKenzie et al. 2014</a>, <a href="docs/Ruckelshaus_etal_2014_EE.pdf" target="_blank">Ruckelshaus et al. 2014</a>, and others)</li>
+<li>Ensure that your synthesis answers the key management questions and addresses the central issues identified and agreed upon on in the <a href="scope.html"><b>Scope</b></a> step. This is your chance to deliver on agreed-upon needs.</li>
 <li>Select elements of your analysis for use in planning documents and communication materials where they are relevant.  For example, in collaboration with local partners, experts, stakeholder and decision-makers, you might select a future scenario to put forward as a preferred plan.  Link outputs and select graphics to specific actionable policies and strategies in your planning documents or legislation. The more tangible you can make the link between your analysis and the planning task at hand, the better.</li>
 <li>Avoid using jargon, complex terminology, or including extraneous information that will confuse your audience</li>
 <li>Ask a colleague or friend who is unfamiliar with your project to review synthesis products and offer feedback</li>
-<li>Visit our <a href="gallery.html"><b>Gallery</b></a> to see examples of MSP visualization techniques</li>
+<li>Visit our <a href="gallery.html"><b>Gallery</b></a> to see examples of marine planning visualization techniques</li>
 </ul>
 <p></p>
 <a name="tools"></a><div class="hr dotted clearfix">&nbsp;</div>
@@ -191,14 +191,14 @@ Synthesizing outputs produced by decision-support tools can be challenging. NatC
 <p></p><br>
 Other helpful off-ramps from InVEST include...
 <ol>
-<li><a href="http://ncp-dev.stanford.edu/~dataportal/nightly-build/release_tip/release_tip/documentation/" target="_blank">InVEST 3.x User's Guide</a> - Each chapter includes an "Interpreting Results" section that defines intermediate and final outputs of each model</li>
-<li><a href="docs/MSP_HelperToolbox.zip" target="_blank">MSP Helper Tools</a> - A GIS toolbox with documentation for processing data inputs to and outputs from InVEST (<i>requires ArcGIS license</i>)</li>
+<li><a href="http://data.naturalcapitalproject.org/nightly-build/invest-users-guide/html/" target="_blank">InVEST 3.x User's Guide</a> - Each chapter includes an "Interpreting Results" section that defines intermediate and final outputs of each model</li>
+<li><a href="docs/MarinePlanning_HelperToolbox.zip" target="_blank">Marine Planning Helper Tools</a> - A GIS toolbox with documentation for processing data inputs to and outputs from InVEST (<i>requires ArcGIS license</i>)</li>
 <li>Visit our <a href="http://forums.naturalcapitalproject.org/index.php?p=/categories/experimental-software-tools" target="_blank">Experimental Software Tools</a> discussion thread for synthesis helper tools that are currently under development and to request tools and features that you would like to see available to make your work with InVEST easier.</li>
 </ol>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/faq_sm.png" align="left"><h2>&nbsp;&nbsp;Frequently Asked Questions (FAQ)</h2>
 <b>Q: Is synthesis of ecosystem service analysis all about trade-offs and synergies?</b><br>
-<i>A: No it's not.  Sometimes, simply mapping current ecosystem services is useful for decision-makers to just know more about  where services are provided. In other words, which regions within their planning area specialize in which services (e.g., <a href="docs/Arkema_etal_2013_NCC.pdf" target="_blank">Arkema et al. 2013</a>).  In other cases, people want to know how services are likely to change under different types of management actions, without making trade-offs explicit (<a href="docs/Guerry_etal_2012_IJBSESM.pdf" target="_blank">Guerry et al. 2012<a/>, <a href="coming_soon.html">Arkema et al. 2015</a>). </i><br>
+<i>A: No it's not.  Sometimes, simply mapping current ecosystem services is useful for decision-makers to just know more about  where services are provided. In other words, which regions within their planning area specialize in which services (e.g., <a href="docs/Arkema_etal_2013_NCC.pdf" target="_blank">Arkema et al. 2013</a>).  In other cases, people want to know how services are likely to change under different types of management actions, without making trade-offs explicit (<a href="docs/Guerry_etal_2012_IJBSESM.pdf" target="_blank">Guerry et al. 2012<a/>, <a href="docs/Arkema_etal_2015_PNAS.pdf" target="_blank">Arkema et al. 2015</a>). </i><br>
 <p></p>
 <b>Q: Is it possible to weigh options and compare tradeoffs if results are not in the same units?</b><br>
 <i>A: We make tradeoffs all the time where we know the cost of something and a physical measure of what we get for that cost. First, try to synthesize results in a way that conveys to your audience what is being gained and/or lost. Quantify it in biophysical, and possibly monetary terms and spell out what might be gained or lost through some management or policy action. After presenting this information (<a href="communicate.html"><b>Communicate</b></a> step) let the stakeholders and decision-makers decide. Monetizing outputs solely for the sake of producing results in a common currency may actually result in less informed decisions.  For example, in our work on the West Coast of Vancouver Island, planners were not interested in seeing monetary values for many of the services that we modeled together. One visual we used showed trade-offs amongst numerous services in different metrics including the dollar value of shellfish aquaculture harvest, the spatial extent of recreational kayaking, and the number of floathomes (<a href="docs/Guerry_etal_2012_IJBSESM.pdf" target="_blank">Guerry et al. 2012</a>).</i>
@@ -210,11 +210,11 @@ Other helpful off-ramps from InVEST include...
 <b>Q: How do I begin the Synthesis Step?</b><br>
 <i>A: Begin the synthesis step by going back to your scoping step and remembering what issues were most important to stakeholders and policy-makers in the reason.  Make sure you link the outputs from the InVEST models back to these issues, using additional data as necessary.  For example, if people in your region are particularly interested in the risk of coastal hazards to low income residents, consider using data from the US Census Bureau on poor families and overlaying this with outputs from the InVEST coastal vulnerability model to identify where coastal habitats will reduce the numbers of people at high risk to hazards (e.g., <a href="docs/Arkema_etal_2013_NCC.pdf" target="_blank">Arkema et al. 2013</a>).</i><br>
 <p></p>
-<b>Q: Which synthesis tool(s) should I use for MSP?</b><br>
+<b>Q: Which synthesis tool(s) should I use for marine planning?</b><br>
 <i>A: Try synthesizing results using methods or tools that are familiar and available to your team. We have found it helpful to synthesize InVEST results using a combination of GIS (ArcGIS or QGIS) and design software like Adobe Illustrator, Microsoft PowerPoint, or LibreOffice Impress. Languages like R or Python can also be used to produce synthetic visuals by those who are comfortable working in a coding environment. Do what works for you and be creative!</i><br>
 <p></p>
 <b>Q: How should I present results?</b><br>
-<i>A: Because the process of MSP relies on spatial information, maps are an obvious choice for communicating results, especially spatial differences throughout a region. However, maps can be difficult to synthesize and to compare. Simple diagrams using arrows, bars, or graphs can help visualize ecosystem service synergies and trade-offs across scenarios. See our <a href="gallery.html"><b>Gallery</b></a> and Use-Cases for some communication examples.</i><br>
+<i>A: Because the process of marine spatial planning relies on spatial information, maps are an obvious choice for communicating results, especially spatial differences throughout a region. However, maps can be difficult to synthesize and to compare. Simple diagrams using arrows, bars, or graphs can help visualize ecosystem service synergies and trade-offs across scenarios. See our <a href="gallery.html"><b>Gallery</b></a> and Use-Cases for some communication examples.</i><br>
 <p></p>
 <a name="links"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/links_sm.png" align="left"><h2>&nbsp;&nbsp;Links</h2>
@@ -223,7 +223,7 @@ Other helpful off-ramps from InVEST include...
 <li><a href="http://www.colorbrewer2.org" target="_blank">Colorbrewer2.org</a> - An excellent resource for including vibrant and color-safe tones in your visuals</li>
 <li><a href="http://www.esri.com/news/arcuser/0112/files/design-principles.pdf" target="_blank">Design principles</a> for mapmaking from ESRI (creators of ArcGIS software)</li>
 <li><a href="http://www.flowingdata.com" target="_blank">Flowingdata.com</a> and <a href="http://www.visualizing.org" target="_blank">Visualizing.org</a> - Data visualization ideas in blog format</li>
-<li><a href="gallery.html" target="_blank">MSP Gallery</a> - Browse maps and figures from other MSP applications to get ideas for your own</li>
+<li><a href="gallery.html" target="_blank">Visualization Gallery</a> - Browse maps and figures from other marine planning applications to get ideas for your own</li>
 </ul>
 <p></p>
 <a name="use-cases"></a><div class="hr dotted clearfix">&nbsp;</div>
