--- a/contact.html
+++ b/contact.html
@@ -57,11 +57,11 @@
 	</div>
 </div>
 <div class="hr dotted clearfix">&nbsp;</div>
-<h2>NatCap and MSP</h2>
-<img src="img/logo_NatCap.jpg" align="left">The <b><a href="http://www.naturalcapitalproject.org/" target="_blank">Natural Capital Project</a></b> (NatCap) aims to <b>integrate the values of nature into all major decisions affecting the environment and human well-being</b>. NatCap has developed practical, science-based approaches and <b><a href="http://www.naturalcapitalproject.org/toolbox.html" target="_blank">tools</a></b> that quantify, map, and value services provided by nature. Accounting for ES reveals the diverse benefits provided by nature, clarifies tradeoffs between alternative development scenarios, and helps make more informed decisions about how to use our coasts and waters.  While NatCap has some experience applying MSP, <u>we do not know, nor do, everything</u>.  Therefore, we have compiled helpful information from others in the MSP community and added our experience to the mix. 
+<h2>NatCap and Marine Planning</h2>
+<img src="img/logo_NatCap.jpg" align="left">The <b><a href="http://www.naturalcapitalproject.org/" target="_blank">Natural Capital Project</a></b> (NatCap) aims to <b>integrate the values of nature into all major decisions affecting the environment and human well-being</b>. NatCap has developed practical, science-based approaches and <b><a href="http://www.naturalcapitalproject.org/toolbox.html" target="_blank">tools</a></b> that quantify, map, and value services provided by nature. While NatCap has some experience with marine planning, <u>we do not know, nor do, everything</u>.  Therefore, we have compiled helpful information from others in the MSP community and added our experience to the mix. 
 <p></p>
 <ul id="folio_scroller">
-<li><span>NatCap MSP Use-Cases</span><iframe width='600px' height='300px' frameBorder='0' src='natcap_msp_usecases.html'></iframe></li>
+<li><span>NatCap Marine Planning Use-Cases</span><iframe width='600px' height='300px' frameBorder='0' src='natcap_msp_usecases.html'></iframe></li>
 </ul> 
 <p></p><br>
 <div class="hr dotted clearfix">&nbsp;</div>
