--- a/frame.html
+++ b/frame.html
@@ -21,9 +21,9 @@
 	</li>
     <li><a href="scope.html" target="content">1. Scope</a>
     </li>
-    <li><a href="data.html" target="content">2. Data</a>
+    <li><a href="data.html" target="content">2. Compile Data</a>
     </li>
-    <li><a href="scenarios.html" target="content">3. Scenarios</a>
+    <li><a href="scenarios.html" target="content">3. Build Scenarios</a>
     </li>
     <li><a href="analyze.html" target="content">4. Analyze</a>
     </li>
@@ -31,7 +31,7 @@
     </li>
     <li><a href="iterate.html" target="content">&#8596; Iterate &#8596;</a>
     </li>
-    <li><a href="communicate.html" target="content">6. Communicate</a>
+    <li><a href="communicate.html" target="content">6. Reach Out</a>
     </li>
 </ul>
 <br> 	
